Made image and data appear on page load

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-
+		<h1> Input a date and get info from NASA!
 		<h1 id = 'title'>Get info from NASA yo!</h1>
 		<section id = 'mediaInput'>
 			<button>Get Media</button>
