--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h1> Input a date and get info from NASA!
+		<header><img id = 'nasaImg' src = 'img/pngwing.com.png' ></header>
+		<h1> Austin NASA Chapter Photo of the Day</h1>
 		<h1 id = 'title'>Get info from NASA yo!</h1>
 		<section id = 'mediaInput'>
 			<button>Get Media</button>
