Changed background to work better with text color

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 		<div id = 'test'>
 			<ul id = 'next'></ul>
 		</div>
-
+		<footer>
+			<ul class="copyright">
+				<li>&copy; Christian Guizar. All rights reserved.</li>
+				<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+			</ul>
+		</footer>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
